# zork

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  netlify.toml  phases.md  project.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/caching/: setup.md
docs/core-concepts/: collections.md  logging.md
docs/database/: migrations.md  overview.md  schema-safety.md
docs/deployment/: environment-variables.md  overview.md
docs/getting-started/: installation.md  project-structure.md  quick-start.md
docs/realtime/: redis-broker.md  sse.md  websocket.md
src/cinder/: __init__.py  app.py  cli.py  errors.py  pipeline.py
src/cinder/auth/: __init__.py  models.py  routes.py  tokens.py
src/cinder/cache/: middleware.py
src/cinder/collections/: router.py  schema.py  store.py
src/cinder/db/: connection.py
src/cinder/hooks/: context.py  runner.py
src/cinder/migrations/: __init__.py  diff.py  engine.py  generator.py
src/cinder/realtime/: broker.py
src/cinder/storage/: keys.py  routes.py
src/zeno/: __init__.py  app.py  cli.py  errors.py  openapi.py  pipeline.py
src/zeno/auth/: __init__.py  models.py  routes.py  tokens.py
src/zeno/cache/: __init__.py  backends.py  invalidation.py  redis_client.py
src/zeno/collections/: router.py  schema.py  store.py
src/zeno/deploy/: __init__.py  config.py  introspect.py
src/zeno/email/: __init__.py  backends.py  smtp.py  (+1 more)
src/zork/: __init__.py  app.py  landingpage.html  logging.py  migrate_sync.py  openapi.py  pipeline.py  response.py  schema_diff.py  staticfiles.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth_backends.py  test_auth_core.py  test_auth_csrf.py  test_auth_delivery.py  test_auth_middleware.py  test_auth_refresh_rotation.py  test_auth_tokens.py  test_cache_backends.py  test_cache_invalidation.py  test_cache_middleware.py  test_cli.py  test_collections_validation.py  test_db.py  test_db_indexes.py  test_deploy.py  test_email_backends.py  test_email_templates.py  test_email_verification.py  test_errors.py  test_file_field.py  test_hooks.py  test_integration.py  test_migration_diff.py  test_migration_diff_indexes.py  test_migration_generator.py  test_migration_generator_indexes.py  test_migrations.py  test_openapi.py  test_pipeline.py  test_public_api.py  test_ratelimit_backends.py  test_ratelimit_middleware.py  test_realtime.py  test_redis_broker.py  test_router.py  test_schema.py  test_schema_indexes.py  (+7 more)
(+90 files in other folders)
