[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinder"
version = "0.1.0"
description = "A lightweight backend framework for Python. Build production-ready REST APIs with built-in auth and dynamic collections."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "typer>=0.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
s3 = ["boto3>=1.34.0"]
email = ["aiosmtplib>=3.0.0"]
redis = ["redis>=5.0.0"]
all = ["anthropic>=0.40.0", "boto3>=1.34.0", "aiosmtplib>=3.0.0", "redis>=5.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[project.scripts]
cinder = "cinder.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cinder"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
