[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zork"
version = "1.0.0"
description = "A lightweight backend framework for Python. Build production-ready REST APIs with built-in auth and dynamic collections."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.40.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "typer>=0.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40.0"]
s3 = ["boto3>=1.34.0"]
email = ["aiosmtplib>=3.0.0"]
redis = ["redis>=5.0.0"]
realtime = ["redis>=5.0.0"]
postgres = ["asyncpg>=0.29.0"]
mysql = ["aiomysql>=0.2.0"]
all = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "aiosmtplib>=3.0.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "fakeredis>=2.20.0"]

[project.scripts]
zork = "zork.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zork"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
]
